# MQTT-Client

./: README.md
conf/: client.conf
src/: CMakeLists.txt  MQTT.c  config.c  json_payload.c  log_utils.c  log_utils.h  makefile  mqtt.c  mqtt_utils.h
